// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with 1 expense 1`] = `
<p>
  Viewing 
  1
   
  expense
   totalling 
  $123.00
</p>
`;

exports[`should render with multiple expenses 1`] = `
<p>
  Viewing 
  2
   
  expenses
   totalling 
  $456.00
</p>
`;

